tests/paczka1/fuzzy1/57094482.err
Error in line 5: lNVLa S36 83,1
Error in line 8: Z6DdrsC78E A375 39,2
Error in line 2: A375 A375 94,4
Error in line 30: lNVLa S748 38,7
